Fix cookie banner's border being inconsistent on small viewports

--- a/source/style/less/global.less
+++ b/source/style/less/global.less
@@ -182,7 +182,9 @@ body {
     }
     button {
       position: static;
-      border: none;
+      border-bottom: none;
+      border-left: none !important;
+      border-right: none !important;
       border-top: 2px solid @gbl-box-border-top;
       &:active {
         border-top: 2px solid darken(@gbl-box-border-top, @cookiebanner-active-modifier);
